initial user authentication setup

--- a/model_studio/templates/base.html
+++ b/model_studio/templates/base.html
@@ -18,6 +18,15 @@
             <h2>Model Studio</h2>
         </nav>
     </section>
+    <ul>
+        {% if g.user %}
+            <li><span>{{g.user['username']}}</span></li>
+            <li><a href="{{url_for('auth.logout')}}">Log Out</a></li>
+        {% else %}
+            <li><a href="{{url_for('auth.register')}}">Register</a></li>
+            <li><a href="{{url_for('auth.login')}}">Log In</a></li>
+        {% endif %}
+    </ul>
 
     <section>
         <div class="container" align="center">
