logout from dash

--- a/model_studio/templates/base.html
+++ b/model_studio/templates/base.html
@@ -15,7 +15,7 @@
 
     <div class="container">
         <nav>
-            <h2>Model Studio</h2>
+            <a href="{{url_for('main.home')}}">Model Studio</a>
         </nav>
     </div>
 
