--- a/model_studio/templates/base.html
+++ b/model_studio/templates/base.html
@@ -24,6 +24,7 @@
         {% if g.user %}
             <li><span>{{g.user['username']}}</span></li>
             <li><a href="{{url_for('auth.logout')}}">Log Out</a></li>
+            <li><a href="{{url_for('main.upload')}}">Upload Data</a></li>
         {% else %}
             <li><a href="{{url_for('auth.register')}}">Register</a></li>
             <li><a href="{{url_for('auth.login')}}">Log In</a></li>
