--- a/model_studio/templates/upload.html
+++ b/model_studio/templates/upload.html
@@ -6,6 +6,7 @@
 
 {% block content %}
     <form method="post" enctype="multipart/form-data">
-        <input type="file" required>
+      <input type="file" name="file">
+      <input type="submit" value="Upload">
     </form>
 {% endblock %}
