--- a/model_studio/templates/auth/register.html
+++ b/model_studio/templates/auth/register.html
@@ -6,12 +6,22 @@
 
 {% block content %}
     <form method='post'>
-        <label for="username">Username</label>
-        <input name="username" id="username" required>
+
+        <label for="email">Email</label>
+        <input name="email" id="email" required>
 
         <label for="password">Password</label>
         <input type="password" name="password", id="password" required>
+        <br>
+
+        <input type="radio" name="role" value="User" checked/>
+        <label for="User">User</label>
+
+        <input type="radio" name="role" value="Admin"/>
+        <label for="Admin">Admin</label>
+        <br>
 
         <input type="submit" value="Register">
+
     </form>
 {% endblock %}
