--- a/model_studio/templates/base.html
+++ b/model_studio/templates/base.html
@@ -21,12 +21,18 @@
 
 
     <ul>
-        {% if g.user %}
-            <li><span>{{g.user['username']}}</span></li>
+        {% if g.user and g.user.has_role('Admin') %}
+            <li>User: <span>{{g.user['email']}}</span></li>
+            <li><a href="{{url_for('auth.register')}}">Register</a></li>
+            <li><a href="{{url_for('auth.reset_password')}}">Reset Password</a></li>
+            <li><a href="{{url_for('auth.logout')}}">Log Out</a></li>
+            <li><a href="{{url_for('main.upload')}}">Upload Data</a></li>
+        {% elif g.user %}
+            <li>User: <span>{{g.user['email']}}</span></li>
+            <li><a href="{{url_for('auth.reset_password')}}">Reset Password</a></li>
             <li><a href="{{url_for('auth.logout')}}">Log Out</a></li>
             <li><a href="{{url_for('main.upload')}}">Upload Data</a></li>
         {% else %}
-            <li><a href="{{url_for('auth.register')}}">Register</a></li>
             <li><a href="{{url_for('auth.login')}}">Log In</a></li>
         {% endif %}
     </ul>
